# Qrocodile_Geant4

./: CMakeLists.txt  G4History.macro  Qrocodile.cc  README.md  TEST.py  Test.STL  dmx.root  dmx_t0.root  dmx_t1.root  gamma.mac
Codes/underground_physics/: CMakeLists.txt  DMX.cc  Platform_sample_complete.ply
Codes/underground_physics/STCyclotron/: Makefile  cmake_install.cmake
Codes/underground_physics/air_shower/: Makefile  cmake_install.cmake
Codes/underground_physics/amsEcal/: Makefile  cmake_install.cmake
Codes/underground_physics/brachytherapy/: Makefile  cmake_install.cmake
Codes/underground_physics/composite_calorimeter/: Makefile  cmake_install.cmake
Codes/underground_physics/eRosita/: Makefile  cmake_install.cmake
Codes/underground_physics/gammaknife/: Makefile  cmake_install.cmake
Codes/underground_physics/gammaray_telescope/: Makefile  cmake_install.cmake
Codes/underground_physics/hadrontherapy/: Makefile  cmake_install.cmake
Codes/underground_physics/human_phantom/: Makefile  cmake_install.cmake
Codes/underground_physics/include/: ASSIMPReader.hh  CADMesh.hh  CADMeshTemplate.hh  CRYGenerator.hbb  CRYPrimary.hbb  CRYSetup.hbb  CRYUtils.hbb  Configuration.hh  DMXDetectorConstruction.hh  Exceptions.hh  FileTypes.hh  Lexer.hh  LexerMacros.hh  Mesh.hh  PLYReader.hh  RNGWrapper.hh  Reader.hh  TessellatedMesh.hh
Codes/underground_physics/iort_therapy/: Makefile  cmake_install.cmake
Codes/underground_physics/lAr_calorimeter/: Makefile  cmake_install.cmake
Codes/underground_physics/medical_linac/: Makefile  cmake_install.cmake
Codes/underground_physics/microbeam/: Makefile  cmake_install.cmake
Codes/underground_physics/microelectronics/: Makefile  cmake_install.cmake
Codes/underground_physics/nanobeam/: Makefile  cmake_install.cmake
Codes/underground_physics/purging_magnet/: Makefile  cmake_install.cmake
Codes/underground_physics/src/: BuiltInReader.cc  CADMeshTemplate.cc
Codes/underground_physics/xray_fluorescence/: Makefile  cmake_install.cmake
cry_v1.7/: setup
cry_v1.7/test/: testMain
include/: CRYGenerator.h  CRYParticle.h  CRYSetup.h  CRYUtils.h  QrocoActionInitializer.hh  QrocoAnalysisManager.hh  QrocoDetectorConstruction.hh  QrocoDetectorMaterial.ihh  QrocoDetectorMessenger.hh  QrocoEventAction.hh  QrocoEventActionMessenger.hh  QrocoMaxTimeCuts.hh  QrocoMinEkineCuts.hh  QrocoParticleSource.hh  QrocoParticleSourceMessenger.hh  QrocoPhysicsList.hh  QrocoPmtHit.hh  QrocoPmtSD.hh  QrocoPrimaryGeneratorAction.hh  QrocoRunAction.hh  QrocoRunActionMessenger.hh  QrocoScintHit.hh  QrocoScintSD.hh  QrocoSpecialCuts.hh  QrocoStackingAction.hh  QrocoStackingActionMessenger.hh  QrocoSteppingAction.hh  QrocoSteppingActionMessenger.hh
src/: QrocoActionInitializer.cc  QrocoDetectorConstruction.cc  QrocoDetectorMaterial.icc  QrocoDetectorMessenger.cc  QrocoDetectorRoom.icc  QrocoEventAction.cc  QrocoEventActionMessenger.cc  QrocoMaxTimeCuts.cc  QrocoMinEkineCuts.cc  QrocoParticleSource.cc  QrocoParticleSourceMessenger.cc  QrocoPhysicsList.cc  QrocoPmtHit.cc  QrocoPmtSD.cc  QrocoPrimaryGeneratorAction.cc  QrocoRunAction.cc  QrocoRunActionMessenger.cc  QrocoScintHit.cc  QrocoScintSD.cc  QrocoSpecialCuts.cc  QrocoStackingAction.cc  QrocoStackingActionMessenger.cc  QrocoSteppingAction.cc  QrocoSteppingActionMessenger.cc
